// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses function declaration 1`] = `
Array [
  Object {
    "type": "FunctionDeclaration",
    "value": Object {
      "left": Object {
        "id": Object {
          "name": "calc",
          "type": "Identifier",
        },
        "params": Array [
          Object {
            "name": "a",
            "type": "Identifier",
          },
          Object {
            "name": "b",
            "type": "Identifier",
          },
          Object {
            "name": "c",
            "type": "Identifier",
          },
        ],
        "type": "ParameterExpression",
      },
      "right": Object {
        "left": Object {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+",
        "right": Object {
          "left": Object {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "*",
          "right": Object {
            "name": "c",
            "type": "Identifier",
          },
          "type": "MathExpression",
        },
        "type": "MathExpression",
      },
      "type": "AssignmentExpression",
    },
  },
  Object {
    "type": "FunctionDeclaration",
    "value": Object {
      "left": Object {
        "id": Object {
          "name": "foo",
          "type": "Identifier",
        },
        "params": Array [
          Object {
            "name": "a",
            "type": "Identifier",
          },
          Object {
            "name": "add",
            "type": "Identifier",
          },
        ],
        "type": "ParameterExpression",
      },
      "right": Object {
        "id": Object {
          "name": "add",
          "type": "Identifier",
        },
        "params": Array [
          Object {
            "name": "a",
            "type": "Identifier",
          },
        ],
        "type": "ParameterExpression",
      },
      "type": "AssignmentExpression",
    },
  },
]
`;

exports[`parses let declaration 1`] = `
Array [
  Object {
    "type": "LetDeclaration",
    "value": Object {
      "left": Object {
        "name": "foo",
        "type": "Identifier",
      },
      "right": Object {
        "type": "NumericLiteral",
        "value": 10,
      },
      "type": "AssignmentExpression",
    },
  },
  Object {
    "type": "LetDeclaration",
    "value": Object {
      "left": Object {
        "name": "bar",
        "type": "Identifier",
      },
      "right": Object {
        "type": "StringLiteral",
        "value": "\\"Hello world",
      },
      "type": "AssignmentExpression",
    },
  },
]
`;

exports[`parses math expression 1`] = `
Array [
  Object {
    "type": "LetDeclaration",
    "value": Object {
      "left": Object {
        "name": "a",
        "type": "Identifier",
      },
      "right": Object {
        "left": Object {
          "type": "NumericLiteral",
          "value": 10,
        },
        "operator": "*",
        "right": Object {
          "left": Object {
            "type": "NumericLiteral",
            "value": 30,
          },
          "operator": "+",
          "right": Object {
            "left": Object {
              "name": "a",
              "type": "Identifier",
            },
            "operator": "-",
            "right": Object {
              "left": Object {
                "type": "NumericLiteral",
                "value": 20,
              },
              "operator": "/",
              "right": Object {
                "name": "foo",
                "type": "Identifier",
              },
              "type": "MathExpression",
            },
            "type": "MathExpression",
          },
          "type": "MathExpression",
        },
        "type": "MathExpression",
      },
      "type": "AssignmentExpression",
    },
  },
]
`;

exports[`parses type declaration 1`] = `
Array [
  Object {
    "type": "TypeDeclaration",
    "value": Object {
      "left": Object {
        "name": "Foo",
        "type": "Identifier",
      },
      "right": Object {
        "name": "Bar",
        "type": "Identifier",
      },
      "type": "AssignmentExpression",
    },
  },
  Object {
    "type": "TypeDeclaration",
    "value": Object {
      "left": Object {
        "name": "Bar",
        "type": "Identifier",
      },
      "right": Object {
        "type": "UnionOperation",
        "values": Array [
          Object {
            "name": "Boolean",
            "type": "Identifier",
          },
          Object {
            "name": "String",
            "type": "Identifier",
          },
          Object {
            "name": "Number",
            "type": "Identifier",
          },
        ],
      },
      "type": "AssignmentExpression",
    },
  },
  Object {
    "type": "TypeDeclaration",
    "value": Object {
      "left": Object {
        "id": Object {
          "name": "Maybe",
          "type": "Identifier",
        },
        "params": Array [
          Object {
            "name": "Number",
            "type": "Identifier",
          },
        ],
        "type": "ParameterExpression",
      },
      "right": Object {
        "type": "UnionOperation",
        "values": Array [
          Object {
            "name": "Nothing",
            "type": "Identifier",
          },
          Object {
            "name": "Number",
            "type": "Identifier",
          },
        ],
      },
      "type": "AssignmentExpression",
    },
  },
  Object {
    "type": "TypeDeclaration",
    "value": Object {
      "left": Object {
        "name": "Users",
        "type": "Identifier",
      },
      "right": Object {
        "id": Object {
          "name": "List",
          "type": "Identifier",
        },
        "params": Array [
          Object {
            "name": "User",
            "type": "Identifier",
          },
        ],
        "type": "ParameterExpression",
      },
      "type": "AssignmentExpression",
    },
  },
]
`;
